--- a/app/src/main/res/layout/quizlayout.xml
+++ b/app/src/main/res/layout/quizlayout.xml
@@ -6,7 +6,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
     android:background="@drawable/classroom"
     android:gravity="clip_horizontal"
-    style="@android:style/Theme.NoTitleBar">
+    style="@android:style/Theme.NoTitleBar"
+    android:id="@+id/rel_layout">
 
     <TextView
         android:layout_width="wrap_content"
@@ -72,7 +73,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#c3666666"
-                android:weightSum="1">
+                android:weightSum="1"
+                android:id="@+id/tb1">
 
                 <RadioButton
                     android:layout_width="275dp"
@@ -97,7 +99,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#c3666666"
-                android:weightSum="1">
+                android:weightSum="1"
+                android:id="@+id/tb2">
 
                 <RadioButton
                     android:layout_width="275dp"
