--- a/app/src/main/res/layout/quizlayout.xml
+++ b/app/src/main/res/layout/quizlayout.xml
@@ -63,7 +63,7 @@
         android:layout_alignParentStart="true"
         android:layout_above="@+id/next"
         android:layout_alignParentEnd="true"
-        android:id="@+id/linearLayout2">
+        android:id="@+id/lin_layout">
 
         <RadioGroup
             android:layout_width="fill_parent"
