--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,97 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
     android:background="@drawable/classroom">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="1"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="false"
-        android:id="@+id/linearLayout">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="67dp"
-            android:layout_gravity="center_horizontal"
-            android:weightSum="1">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/input_button"
-                android:id="@+id/input_button"
-                style="@style/Animation.AppCompat.DropDownUp"
-                android:background="@drawable/buttonz"
-                android:elegantTextHeight="false"
-                android:enabled="true"
-                android:focusableInTouchMode="false"
-                android:textStyle="bold|normal" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="67dp"
-            android:weightSum="1">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/flash_button"
-                android:id="@+id/flashcard_button"
-                android:layout_gravity="center_horizontal"
-                style="@style/Animation.AppCompat.DropDownUp"
-                android:background="@drawable/buttonz"
-                android:elegantTextHeight="false"
-                android:enabled="true"
-                android:focusableInTouchMode="false"
-                android:textStyle="bold|normal" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="67dp"
-            android:weightSum="1">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/writing_button"
-                android:id="@+id/writing_button"
-                style="@style/Animation.AppCompat.DropDownUp"
-                android:background="@drawable/buttonz"
-                android:elegantTextHeight="false"
-                android:enabled="true"
-                android:focusableInTouchMode="false"
-                android:textStyle="bold|normal" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="67dp"
-            android:weightSum="1">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/quiz_button"
-                android:id="@+id/quiz_button"
-                android:layout_gravity="center_horizontal"
-                style="@style/Animation.AppCompat.DropDownUp"
-                android:background="@drawable/buttonz"
-                android:elegantTextHeight="false"
-                android:enabled="true"
-                android:focusableInTouchMode="false"
-                android:textStyle="bold|normal" />
-        </TableRow>
-
-    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -110,4 +23,27 @@
         android:autoText="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/question">
+
+        <android.support.v4.view.ViewPager
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="271dp"
+            android:layout_below="@+id/question"
+            android:clickable="true" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:id="@+id/enter"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/nextt" />
+    </LinearLayout>
+
 </RelativeLayout>
