--- a/app/src/main/res/layout/optionfrag1.xml
+++ b/app/src/main/res/layout/optionfrag1.xml
@@ -13,6 +13,15 @@
         android:weightSum="100">
 
         <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView4"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="35"
+            android:src="@drawable/settingsnote"
+            android:background="@drawable/maintitle" />
+
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/settings"
@@ -21,7 +30,7 @@
             android:layout_alignParentEnd="true"
             android:focusable="false"
             android:clickable="false"
-            android:layout_weight="90" />
+            android:layout_weight="65" />
 
         <ImageView
             android:layout_width="30dp"
