--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -6,44 +6,29 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
     android:background="@drawable/classroom">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/titlename"
-        android:id="@+id/question"
-        android:textStyle="bold|italic"
-        android:textSize="85dp"
-        style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
-        android:background="#c81d1c19"
-        android:textAllCaps="false"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:textColor="#ffffffff"
-        android:autoText="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/question">
+        android:id="@+id/linearLayout"
+        android:weightSum="100">
 
         <android.support.v4.view.ViewPager
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/pager"
             android:layout_width="match_parent"
-            android:layout_height="271dp"
+            android:layout_height="match_parent"
             android:layout_below="@+id/question"
-            android:clickable="true" />
+            android:clickable="true"
+            android:layout_weight="10" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:id="@+id/enter"
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/nextt" />
+            android:background="@drawable/nextt"
+            android:layout_weight="90" />
     </LinearLayout>
 
 </RelativeLayout>
