--- a/app/src/main/res/layout/flashcards.xml
+++ b/app/src/main/res/layout/flashcards.xml
@@ -5,69 +5,65 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
     android:background="@drawable/classroom"
-    android:gravity="clip_horizontal">
+    android:gravity="clip_horizontal"
+    style="@android:style/Theme.NoTitleBar"
+    android:id="@+id/rel_layout">
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/flashcard_sightword"
+        android:text="@string/question"
         android:id="@+id/question"
         android:textStyle="bold|italic"
         android:textSize="60sp"
         style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
-        android:background="@drawable/blackboard"
         android:textAllCaps="false"
         android:textAlignment="center"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
         android:textColor="#ffffffff"
-        android:gravity="center" />
-
-    <ProgressBar
-        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:layout_alignParentTop="true"
-        android:layout_alignEnd="@+id/question"
-        android:layout_alignParentEnd="true"
-        android:progressBackgroundTint="@color/abc_primary_text_disable_only_material_dark" />
+        android:contentDescription="question"
+        android:background="@drawable/kidsboard"
+        android:gravity="center"
+        android:singleLine="true"
+        android:paddingTop="60dp"
+        android:focusable="true"
+        android:layout_below="@+id/home"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="52dp"
+        android:layout_alignParentEnd="true" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/home"
-        android:background="@drawable/back"
-        android:layout_below="@+id/progressBar"
-        android:layout_alignParentStart="true"
-        android:text="@string/back" />
+        android:background="@drawable/home"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentEnd="false" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/next"
-        android:background="@drawable/next"
-        android:layout_below="@+id/question"
-        android:layout_alignParentEnd="true"
-        android:text="@string/next" />
+        android:background="@drawable/new_next"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/question" />
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleHorizontal"
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/progressBar2"
-        android:layout_marginStart="130dp"
-        android:layout_alignTop="@+id/progressBar"
-        android:layout_alignBottom="@+id/progressBar"
-        android:layout_alignParentEnd="true" />
+        android:id="@+id/back"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="false"
+        android:background="@drawable/new_back" />
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar3"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/next" />
+    <Button
+        android:layout_width="48dp"
+        android:layout_height="67dp"
+        android:id="@+id/question_playboi"
+        android:background="@android:drawable/ic_media_play"
+        android:layout_alignBottom="@+id/question"
+        android:layout_alignStart="@+id/next"
+        android:layout_alignEnd="@+id/question" />
+
 
 </RelativeLayout>
