--- a/app/src/main/res/layout/writing.xml
+++ b/app/src/main/res/layout/writing.xml
@@ -11,18 +11,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/flashcard_sightword"
         android:id="@+id/question"
         android:textStyle="bold|italic"
         android:textSize="60sp"
         style="@style/Base.Theme.AppCompat.Light.DarkActionBar"
-        android:background="@drawable/blackboard"
+        android:background="@drawable/kidsboard"
         android:textAllCaps="false"
         android:textAlignment="center"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:textColor="#ffffffff"
-        android:gravity="center" />
+        android:gravity="center"
+        android:layout_alignParentEnd="true" />
 
     <ProgressBar
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
@@ -38,19 +38,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/home"
-        android:background="@drawable/back"
+        android:background="@drawable/home"
         android:layout_below="@+id/progressBar"
-        android:layout_alignParentStart="true"
-        android:text="@string/back" />
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/next"
-        android:background="@drawable/next"
+        android:background="@drawable/new_next"
         android:layout_below="@+id/question"
-        android:layout_alignParentEnd="true"
-        android:text="@string/next" />
+        android:layout_alignParentEnd="true" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
